Fixed some text in dashboard being unreadable after dark-mode color change

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1959,8 +1959,12 @@ body.dark-mode .subnav-link.active{
 body.dark-mode .modal-header{
     background-color: #2a2a2a;
 }
-body.dark-mode #addCurrencyType {
-    color: #000000; /* Color for currency prefix */
+/* Changing text color back */
+body.dark-mode #addCurrencyType, /* Currency Prefix */
+body.dark-mode #settleCurrencyType,
+body.dark-mode .split-details, /* Split method dropdown */
+body.dark-mode .split-details h4{
+    color: #000000;
 }
 
 /*Recent Activity*/
